Create: header + media

--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -8,9 +8,9 @@ html
 
 body
   position: relative
-  background-color: $color-dark
+  background-color: $color-light
   font-family: "PlayfairDisplay", Helvetica, sans-serif
-  color: $color-light
+  color: $color-dark
 
 .container
   max-width: 1170px
