--- a/sass/media/_767px.sass
+++ b/sass/media/_767px.sass
@@ -2,3 +2,9 @@
   .container
     max-width: 576px
     width: 90%
+
+  .header
+    padding: 4rem 0
+    .nav
+      &__item
+        margin-right: 3rem
