--- a/sass/media/_575px.sass
+++ b/sass/media/_575px.sass
@@ -1,1 +1,7 @@
-//@media (max-width: 575px)
+@media (max-width: 575px)
+  .header
+    .logo
+      margin-bottom: 1rem
+    .nav
+      &__item
+        margin-right: 1rem
