--- a/sass/media/_991px.sass
+++ b/sass/media/_991px.sass
@@ -1,3 +1,9 @@
 @media (max-width: 991px)
   .container
     max-width: 700px
+
+  .header
+    padding: 6rem 0
+    .nav
+      &__item
+        margin-right: 5rem
