Create: photodiary section + media

--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -1,5 +1,12 @@
-@mixin section-title()
-  font: normal 700 3.2rem/5rem "PlayfairDisplay"
-  color: $color-dark
+@mixin text-grey()
+  font: normal 300 1.4rem 'Ubuntu'
   text-transform: uppercase
-  text-align: center
+  color: $color-grey2
+
+@mixin text-title()
+  font: normal 400 3rem "PlayfairDisplay"
+  color: $color-grey
+
+@mixin text-paragraph()
+  font: normal 400 1.4rem/2.4 "PlayfairDisplay"
+  color: $color-grey
