--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -32,7 +32,7 @@
       &:last-child
         margin-right: 0
     &__link
-      color: $color-dark
+      color: $color-grey
       font: normal 400 1.4rem/2.4rem "PlayfairDisplay"
       text-transform: uppercase
       &:hover
