--- a/sass/media/_767px.sass
+++ b/sass/media/_767px.sass
@@ -11,3 +11,14 @@
 
   .intro
     height: 36rem
+
+  .photodiary
+    padding-top: 6rem
+    padding-bottom: 8rem
+    &__suptitle
+      margin-bottom: 2rem
+    &__title
+      margin-bottom: 2.5rem
+    &__text
+      margin-bottom: 4rem
+      line-height: 2.2rem
