--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -46,3 +46,12 @@ button
     outline: none
     border: none
     padding: 0
+
+.btn
+  font: normal 300 1.4rem 'Ubuntu'
+  text-transform: uppercase
+  &--grey
+    color: $color-grey2
+    &:hover
+      color: $color-dark2
+      transition: color 0.5s ease
