--- a/sass/media/_575px.sass
+++ b/sass/media/_575px.sass
@@ -8,3 +8,14 @@
 
   .intro
     height: 30rem
+
+  .photodiary
+    padding-top: 4rem
+    padding-bottom: 6rem
+    &__suptitle
+      margin-bottom: 1.5rem
+    &__title
+      margin-bottom: 2rem
+      font-size: 2.6rem
+    &__text
+      margin-bottom: 3rem
