--- a/sass/media/_991px.sass
+++ b/sass/media/_991px.sass
@@ -10,3 +10,14 @@
 
   .intro
     height: 42rem
+
+.photodiary
+  padding-top: 8rem
+  padding-bottom: 12rem
+  &__suptitle
+    margin-bottom: 2.4rem
+  &__title
+    margin-bottom: 3rem
+  &__text
+    margin-bottom: 4.8rem
+    line-height: 2.3rem
