Create: blog sections + media

--- a/sass/blocks/_photodiary.sass
+++ b/sass/blocks/_photodiary.sass
@@ -2,6 +2,10 @@
   padding-top: 10rem
   padding-bottom: 13.5rem
 
+  &-wrapper
+    max-width: 90rem  
+    margin: 0 auto
+
   &__suptitle
     margin-bottom: 2.8rem
     @include text-grey()
