--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -1,3 +1,4 @@
+/*=== Mixins for text styles ===*/
 @mixin text-grey()
   font: normal 300 1.4rem 'Ubuntu'
   text-transform: uppercase
@@ -8,5 +9,27 @@
   color: $color-grey
 
 @mixin text-paragraph()
-  font: normal 400 1.4rem/2.4 "PlayfairDisplay"
+  font: normal 400 1.4rem/2.4rem "PlayfairDisplay"
   color: $color-grey
+
+/*=== Mixin for multiline dots ===*/
+@mixin multiLineEllipsis($lineHeight: 1.2em, $lineCount: 1, $bgColor: $color-light)
+  overflow: hidden
+  position: relative
+  line-height: $lineHeight
+  max-height: $lineHeight * $lineCount
+  text-align: justify
+  padding-right: 1em
+  &:before
+    content: '...'
+    position: absolute
+    right: 0
+    bottom: 0
+  &:after 
+    content: ''
+    position: absolute
+    right: 0
+    width: 1em
+    height: 1em
+    margin-top: 1.2em
+    background: $bgColor
