--- a/sass/media/_575px.sass
+++ b/sass/media/_575px.sass
@@ -19,3 +19,13 @@
       font-size: 2.6rem
     &__text
       margin-bottom: 3rem
+
+  .blog
+    &__item
+      margin: 0 auto 6rem
+    &__image-wrapper
+      height: 20rem
+    &__tag
+      margin-bottom: 1rem
+    &__title
+      margin-bottom: 1.5rem
