--- a/sass/media/_767px.sass
+++ b/sass/media/_767px.sass
@@ -22,3 +22,17 @@
     &__text
       margin-bottom: 4rem
       line-height: 2.2rem
+
+  .blog
+    &-wrapper
+      flex-direction: column
+    &__item
+      width: 100%
+      margin: 0 auto 8rem
+    &__image-wrapper
+      height: 28.8rem
+      margin-bottom: 2rem
+    &__tag
+      margin-bottom: 1.5rem
+    &__title
+      margin-bottom: 2rem
