--- a/sass/media/_991px.sass
+++ b/sass/media/_991px.sass
@@ -11,13 +11,25 @@
   .intro
     height: 42rem
 
-.photodiary
-  padding-top: 8rem
-  padding-bottom: 12rem
-  &__suptitle
-    margin-bottom: 2.4rem
-  &__title
-    margin-bottom: 3rem
-  &__text
-    margin-bottom: 4.8rem
-    line-height: 2.3rem
+  .photodiary
+    padding-top: 8rem
+    padding-bottom: 12rem
+    &__suptitle
+      margin-bottom: 2.4rem
+    &__title
+      margin-bottom: 3rem
+    &__text
+      margin-bottom: 4.8rem
+      line-height: 2.3rem
+
+  .blog
+    &__item
+      margin-bottom: 10rem
+    &__image-wrapper
+      height: 24rem
+      margin-bottom: 2.5rem
+    &__tag
+      margin-bottom: 2rem
+    &__title
+      margin-bottom: 2.5rem
+      font-size: 2.6rem
