--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,6 +11,7 @@
 @import 'blocks/header'
 @import 'blocks/intro'
 @import 'blocks/photodiary'
+@import 'blocks/blog'
 @import 'blocks/footer'
 
 // Стили для адаптива
