Create: newsletter section + media

--- a/sass/_global.sass
+++ b/sass/_global.sass
@@ -55,3 +55,18 @@ button
     &:hover
       color: $color-dark2
       transition: color 0.5s ease
+
+/*=== PHPMailer Message ===*/
+.message
+  padding: 10rem 0
+  &-wrapper
+    max-width: 90rem  
+    margin: 0 auto
+  &__text
+    font: normal 400 2.4rem "PlayfairDisplay"
+    color: $color-dark2
+    text-align: center
+  &__link
+    color: #1E90FF
+    &:hover
+      text-decoration: underline
