--- a/sass/media/_767px.sass
+++ b/sass/media/_767px.sass
@@ -36,3 +36,13 @@
       margin-bottom: 1.5rem
     &__title
       margin-bottom: 2rem
+
+  .newsletter
+    margin-bottom: 6rem
+    padding: 4rem 0
+    &__title
+      margin-bottom: 4rem
+    .form
+      width: 75%
+      &__input
+        width: 100%
