--- a/sass/media/_575px.sass
+++ b/sass/media/_575px.sass
@@ -29,3 +29,10 @@
       margin-bottom: 1rem
     &__title
       margin-bottom: 1.5rem
+
+  .newsletter
+    &__title
+      margin-bottom: 3rem
+      font-size: 2.6rem
+    .form
+      width: 100%
