--- a/sass/media/_991px.sass
+++ b/sass/media/_991px.sass
@@ -33,3 +33,9 @@
     &__title
       margin-bottom: 2.5rem
       font-size: 2.6rem
+
+  .newsletter
+    margin-bottom: 8rem
+    padding: 6rem 0
+    &__title
+      margin-bottom: 6rem
