--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,16 +2,17 @@
 @import 'variables'
 // Шрифты
 @import 'fonts'
-// Глобальные стили
-@import 'global'
 // Миксины
 @import 'mixins'
+// Глобальные стили
+@import 'global'
 
 // Стили для всех блоков главной страницы сайта
 @import 'blocks/header'
 @import 'blocks/intro'
 @import 'blocks/photodiary'
 @import 'blocks/blog'
+@import 'blocks/newsletter'
 @import 'blocks/footer'
 
 // Стили для адаптива
