--- a/sass/media/_767px.sass
+++ b/sass/media/_767px.sass
@@ -46,3 +46,11 @@
       width: 75%
       &__input
         width: 100%
+
+  .footer
+    padding-top: 3rem
+    padding: 3rem
+    &-wrapper
+      flex-direction: column
+    &__links
+      margin-bottom: 1rem
