--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -38,3 +38,6 @@
       &:hover
         color: $color-dark2
         transition: color 0.5s ease
+      &.active
+        color: $color-dark2
+        text-decoration: underline
