--- a/sass/blocks/_photodiary.sass
+++ b/sass/blocks/_photodiary.sass
@@ -15,5 +15,38 @@
     @include text-title()
 
   &__text
-    margin-bottom: 5.2rem
+    margin-bottom: 3rem
     @include text-paragraph()
+    &--italic
+      font-style: italic
+      padding: 0 2rem
+
+  &__image-wrapper
+    width: 100%
+    height: 64rem
+    margin-bottom: 6rem
+  &__image
+    width: 100%
+    height: 100%
+    object-fit: cover
+    filter: grayscale(1)
+    &:hover
+      filter: grayscale(0)
+      transition: filter 0.5s ease
+
+  &__share
+    display: flex
+    align-items: center
+    justify-content: flex-end
+  .share
+    &__text
+      display: inline-block
+      margin-right: 1rem
+      @include text-grey($font-size: 1.3rem)
+    &__link
+      margin-left: 1rem
+      font-size: 1.7rem
+      color: $color-grey2
+      &:hover
+        color: $color-dark2
+        transition: color 0.5s ease
