--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,6 +13,7 @@
 @import 'blocks/photodiary'
 @import 'blocks/blog'
 @import 'blocks/newsletter'
+@import 'blocks/moreposts'
 @import 'blocks/footer'
 
 // Стили для адаптива
