Create: media for photodiary and moreposts sections

--- a/sass/media/_767px.sass
+++ b/sass/media/_767px.sass
@@ -20,8 +20,10 @@
     &__title
       margin-bottom: 2.5rem
     &__text
-      margin-bottom: 4rem
       line-height: 2.2rem
+    &__image-wrapper
+      height: 40rem
+      margin-bottom: 4rem
 
   .blog
     &-wrapper
@@ -36,6 +38,20 @@
       margin-bottom: 1.5rem
     &__title
       margin-bottom: 2rem
+
+  .moreposts
+    padding: 4rem 0
+    &__suptitle
+      margin-bottom: 2rem
+    &__items
+      flex-direction: column
+    &__item
+      margin: 0 auto 3rem
+    .morepost
+      width: 28.8rem
+      max-width: 100%
+      &__image-wrapper
+        height: 18rem
 
   .newsletter
     margin-bottom: 6rem
