--- a/sass/media/_991px.sass
+++ b/sass/media/_991px.sass
@@ -19,8 +19,10 @@
     &__title
       margin-bottom: 3rem
     &__text
-      margin-bottom: 4.8rem
       line-height: 2.3rem
+    &__image-wrapper
+      height: 52rem
+      margin-bottom: 5rem
 
   .blog
     &__item
@@ -33,6 +35,18 @@
     &__title
       margin-bottom: 2.5rem
       font-size: 2.6rem
+
+  .moreposts
+    padding: 6rem 0
+    &__suptitle
+      margin-bottom: 3rem
+    .morepost
+      width: 30%
+      &__image-wrapper
+        height: 15rem
+        margin-bottom: 1.5rem
+      &__title
+        text-align: center
 
   .newsletter
     margin-bottom: 8rem
