--- a/sass/blocks/_moreposts.sass
+++ b/sass/blocks/_moreposts.sass
@@ -1,6 +1,6 @@
 .moreposts
   margin-bottom: 10rem
-  padding: 7rem 0 9rem
+  padding: 7rem 0
   background-color: #f0f0f0
   &-wrapper
     max-width: 90rem  
@@ -14,6 +14,8 @@
     display: flex
     justify-content: space-between
     flex-wrap: wrap
+  &__item
+    margin-bottom: 2rem
   .morepost
     width: 27rem
     &__image-wrapper
