--- a/sass/media/_575px.sass
+++ b/sass/media/_575px.sass
@@ -18,6 +18,11 @@
       margin-bottom: 2rem
       font-size: 2.6rem
     &__text
+      margin-bottom: 2rem
+      &--italic
+        padding: 0 1rem
+    &__image-wrapper
+      height: 28.8rem
       margin-bottom: 3rem
 
   .blog
