Create: comments section + media

--- a/sass/media/_575px.sass
+++ b/sass/media/_575px.sass
@@ -41,3 +41,22 @@
       font-size: 2.6rem
     .form
       width: 100%
+
+  .comments
+    padding: 4rem 0
+    .comment
+      &__image-wrapper
+        min-width: 5rem
+        width: 5rem
+        height: 5rem
+        margin-right: 1.5rem
+    &__leave-comment
+      margin-bottom: 2rem
+    &__user
+      width: 5rem
+      min-width: 5rem
+      height: 5rem
+      margin-right: 1.5rem
+      .user
+        &__initials
+          font-size: 2.6rem
