--- a/sass/media/_767px.sass
+++ b/sass/media/_767px.sass
@@ -63,6 +63,24 @@
       &__input
         width: 100%
 
+  .comments
+    padding: 4rem 0 6rem
+    &__item
+      margin-bottom: 3rem
+    .comment
+      &__image-wrapper
+        min-width: 6rem
+        width: 6rem
+        height: 6rem
+        margin-right: 2rem
+    &__leave-comment
+      margin-bottom: 3rem
+    &__user
+      width: 6rem
+      min-width: 6rem
+      height: 6rem
+      margin-right: 2rem
+
   .footer
     padding-top: 3rem
     padding: 3rem
