--- a/sass/media/_991px.sass
+++ b/sass/media/_991px.sass
@@ -53,3 +53,8 @@
     padding: 6rem 0
     &__title
       margin-bottom: 6rem
+
+  .comments
+    padding: 6rem 0 8rem
+    &__item
+      margin-bottom: 4rem
