--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -7,10 +7,10 @@
   text-transform: uppercase
   color: $color-grey2
 
-@mixin text-title($font-size: 3rem)
+@mixin text-title($font-size: 3rem, $font-weight: 400)
   font-style: normal 
   font-family: "PlayfairDisplay"
-  font-weight: 400
+  font-weight: $font-weight
   font-size: $font-size
   color: $color-grey
 
