--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,6 +14,7 @@
 @import 'blocks/blog'
 @import 'blocks/newsletter'
 @import 'blocks/moreposts'
+@import 'blocks/comments'
 @import 'blocks/footer'
 
 // Стили для адаптива
